# virtual-camera

./: .gitignore  CMakeLists.txt  display_image.cpp  frame.cpp  frame.hpp  main.cpp
